@@ -1,3 +1,8 @@
+2008-11-25  Brian Curry  <http://www.raiazome.com/Brian_Curry>
+
+	* modules/forms.pl (FormsRule): Removed Sidebar-specific hack.
+	Thanks, Alex!
+
 2008-11-24  Alex Schroeder  <alex@gnu.org>
 
 	* modules/google-custom-search.pl ($GoogleCustomSearchEngine): New
